...
              );
            },
            destinations: const [
              NavigationDestination(icon: Icon(Icons.home), label: 'Home'),
              NavigationDestination(
                icon: Icon(Icons.grid_view),
                label: 'Boards',
              ),
              NavigationDestination(icon: Icon(Icons.people), label: 'Users'),
            ],
          ),
        ),
        branches: [
...
